src/objects/Enrolment__c.object
<CustomObject>
    <fields>
        <fullName>Care_Plan_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Objective</label>
        <referenceTo>Care_Plan_Objective__c</referenceTo>
        <relationshipLabel>Enrolments on courses</relationshipLabel>
        <relationshipName>Enrolments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_joined_program__c</fullName>
        <label>Date joined program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Service__c</fullName>
        <label>Program/Service</label>
        <referenceTo>Program_Service__c</referenceTo>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_on_Programme__c</fullName>
        <label>Status on Programme</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Young_Person__c</fullName>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrolments</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Enrolment</label>
    <nameField>
        <displayFormat>Enrolment-{0000}</displayFormat>
        <label>Enrolment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrolments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>